--- a/new_sites/static/css/style2.css
+++ b/new_sites/static/css/style2.css
@@ -211,7 +211,7 @@ body {
 	border:thin	#00FF00 solid;
 	text-align:center;
 	margin:1%;
-	word-break: break-all;
+	overflow: hidden;
 
 }
 
@@ -228,6 +228,8 @@ body {
 	text-align:center;
 	margin:1%;
 	padding:2%;
+
+	overflow: hidden;
 	}
 }
 
@@ -257,7 +259,7 @@ body {
 	padding-bottom:10%;
 	font-family:Helvetica;
 	font-size: 1.0em;
-
+	padding:2%;
 
 
 
@@ -266,9 +268,11 @@ body {
 .book-author h3{ 
 
 	font-size: 1.0em;
+	word-break: break-all;
 
 
 }
+
 
 .book-title h2{ 
 
