--- a/new_sites/templates/new_sites/topics.html
+++ b/new_sites/templates/new_sites/topics.html
@@ -7,7 +7,7 @@
 
 
     {%for topic in topics%}
-    <div class = 'top-container'>
+    <div class = 'top-container2'>
 
         <div id = 'top-title'>
             {{topic.title}}
