--- a/new_sites/static/css/style2.css
+++ b/new_sites/static/css/style2.css
@@ -162,8 +162,7 @@ body {
 	border-right: thin solid #00FF00;
 	border-left: thin solid #00FF00;
 	border-bottom: thin solid #00FF00;
-	text-align:center;
-	color:#00FF00;
+
 
 	padding-left:10%;
 	padding-right:10%;
@@ -171,8 +170,35 @@ body {
 	margin-left:20%;
 	margin-right:20%;
 
+	
 
 
+}
+
+
+.top-container2{
+	border-right: thin solid #00FF00;
+	border-left: thin solid #00FF00;
+	border-bottom: thin solid #00FF00;
+
+	text-align:center;
+	padding-left:10%;
+	padding-right:10%;
+
+	margin-left:20%;
+	margin-right:20%;
+
+	
+
+
+}
+
+
+.top-container img{ 
+
+	display: block;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 
