--- a/new_sites/templates/new_sites/post_list.html
+++ b/new_sites/templates/new_sites/post_list.html
@@ -1,5 +1,4 @@
-{%extends "new_sites/base.html"%}
-
+{%extends 'new_sites/base.html'%}
 {% block content%}
 
     {%if posts%}
@@ -11,7 +10,7 @@
             </div>
 
         </div>
-    {%endfor%}
+        {%endfor%}
     
     {%else%} 
             <li>No topics have been added yet.</li>
