--- a/new_sites/templates/new_sites/post_list.html
+++ b/new_sites/templates/new_sites/post_list.html
@@ -5,7 +5,7 @@
         <div class = 'top-container2'>
 
             <div id = 'top-title'>
-                {{post.title}}
+                {{post}} 
             </div>
 
         </div>
