--- a/new_sites/templates/new_sites/new_post.html
+++ b/new_sites/templates/new_sites/new_post.html
@@ -11,7 +11,7 @@
 
         {{form.as_p}}
 
-        <button class = 'submit'>Add Topic</button>
+        <button class = 'submit'>Add</button>
 
     </form>
 
