--- a/new_sites/templates/new_sites/index.html
+++ b/new_sites/templates/new_sites/index.html
@@ -68,6 +68,7 @@ window.onload = function(){start();}
     <div class = 'add-book '>
 
         <a href="{% url 'new_sites:new_topichome'%}">Add Topic</a>
+        <a href="{% url 'new_sites:new_topichome2'%}">Add Post</a>
 
     </div>
 
