--- a/new_sites/templates/new_sites/post_list.html
+++ b/new_sites/templates/new_sites/post_list.html
@@ -1,11 +1,11 @@
 {%extends 'new_sites/base.html'%}
 {% block content%}
 
-        {%for post in posts%}
+        {%for topic in topics%}
         <div class = 'top-container2'>
 
             <div id = 'top-title'>
-                {{post.title}} 
+                {{topic.title}} 
             </div>
 
         </div>
