--- a/new_sites/templates/new_sites/post_list.html
+++ b/new_sites/templates/new_sites/post_list.html
@@ -13,4 +13,6 @@
             <li>No topics have been added yet.</li>
         {% endfor %}
 
+        <a href="{% url 'new_sites:new_topichome2'%}">Add Post</a>
+
 {%endblock%}
