--- a/new_sites/templates/new_sites/post_list.html
+++ b/new_sites/templates/new_sites/post_list.html
@@ -18,7 +18,7 @@
 
         {%if topic.owner == request.user and user.is_authenticated %}
 
-            <a href = "{%url 'new_sites:delete_topichome' topichome2.id%}">Delete topic</a>
+            <a href = "{%url 'new_sites:delete_post' topichome2.id%}">Delete topic</a>
         
         {% endif %}
 
