--- a/new_sites/templates/new_sites/base.html
+++ b/new_sites/templates/new_sites/base.html
@@ -14,7 +14,7 @@
 
             <a href = "{%url 'new_sites:index' %}">HOME</a> </li>
             <a href = "{%url 'new_sites:post_list' %}">POSTS</a> </li>
-            <a href = "{%url 'new_sites:topics' %}">VIDEOS</a> </li>
+            <a href = "{%url 'new_sites:videos' %}">VIDEOS</a> </li>
             <a href = "{%url 'new_sites:book_list' %}">BOOKS</a> </li>
             <a href = "{%url 'new_sites:contact' %}">CONTACT</a> </li>
 
