--- a/new_sites/templates/new_sites/post_list.html
+++ b/new_sites/templates/new_sites/post_list.html
@@ -1,36 +1,116 @@
 {%extends 'new_sites/base.html'%}
+
+
+
 {% block content%}
 
         {%for topic in topics%}
 
-        <div class = 'top-container2'>
+        <div class = 'top-container3'>
 
-            <div id = 'top-title'>
+            <div id = 'post-title'>
                 {{topic.title}} 
             </div>
+            <style>  
+                .content {
+                    display: block;
+                    height: auto;
+                    margin: auto;
+                    position: relative;
+                    text-align: center;
+                    top: 40%;
+                    width: -webkit-calc(70%);
+                }
+            
+            
+                .typewrite {
+                font-size: 100%;
+                border-right: 2px solid rgba(255,255,255,.75);
+                line-height: 1.15;
+                }
+            
+                .anim-typewrite {
+                animation: blinkTextCursor 500ms infinite normal;
+                }
+            
+                @keyframes blinkTextCursor{
+                from{border-right-color: rgba(255,255,255,.75);}
+                to{border-right-color: transparent;}
+                }
+            
+                /* style inspired by Thiago Teles Pereira @thiagoteles */   
+            </style> 
 
-        </div>
-
-        <div id = 'mentry-text'>
-            {{topic.text|linebreaks}}
-        </div>
 
 
-        {%if topic.owner == request.user and user.is_authenticated %}
 
-            <a href = "{%url 'new_sites:delete_post' topic.id%}">Delete topic</a>
+
+
+
+
+            <div id = 'summary-text'>
+              <!--  <p> {{topic.summary|linebreaks}} </p>--> 
+
+                <script>
+                    var i = 0;
+                   var txt = '{{topic.summary}}';
+               
+                       function typeWriter() {
+                       if (i < txt.length) {
+                           document.getElementsByClassName('js-typewrite')[0].innerHTML += txt.charAt(i);
+                           i++;
+                           setTimeout(typeWriter, 65);
+                       }
+                       }
+               
+                       setTimeout(typeWriter, 1000);
+                   </script>
+           
+               
+               <body>
+               
+                   <p class="content">
+                       <span class="typewrite anim-typewrite js-typewrite"></span>
+                   </p>
+               
+               </body>
+       
+            </div>
         
-        {% endif %}
+
+
+
+
+
+
+            <div id = 'mpost-text'>
+                {{topic.text|linebreaks}}
+            </div>
+
+        
+
+            <div id = 'change-text'> 
+            {%if topic.owner == request.user and user.is_authenticated %}
+                <a href = "{%url 'new_sites:post_edit' topic.id%}">Edit entry</a>
+                <a href = "{%url 'new_sites:delete_post' topic.id%}">Delete topic</a>
+             {% endif %}
+            </div>
+        </div>
+
+        
+
+     
 
 
         {%empty%} 
             <li>No topics have been added yet.</li>
         {% endfor %}
 
-        
+
 
     {%if user.is_authenticated%}
-        <a href="{% url 'new_sites:new_topichome2'%}">Add Post</a>
+        <a href="{% url 'new_sites:new_post'%}">Add Post</a>
     {%endif%}
 
+    
 {%endblock%}
