--- a/new_sites/templates/new_sites/videos.html
+++ b/new_sites/templates/new_sites/videos.html
@@ -15,31 +15,27 @@
         
         {%if topic.image%} 
             <img src = "{{topic.image.url}}" alt = "{{topic.title}}">
-
         {%endif%}
 
         {% if topic.urllink%}
+
             <div class = 'video-link'>
-               
-                   
                 <iframe width="{{ 480 }}" height="{{ 320 }}" src="{{ topic.urllink }}" 
                     frameborder="0" allowfullscreen>
                 
                 </iframe>
-                
             </div>
+
         {%endif%}
         
         <div id = 'mentry-text'>
-          
-           
             {{topic.text|linebreaks}}
         </div>
 
         {%if topic.owner == request.user and user.is_authenticated %}
 
-            <a href = "{%url 'new_sites:topic_edit' topic.id%}">Edit entry</a>
-            <a href = "{%url 'new_sites:delete_topic' topic.id%}">Delete topic</a>
+            <a href = "{%url 'new_sites:video_edit' topic.id%}">Edit Video</a>
+            <a href = "{%url 'new_sites:delete_video' topic.id%}">Delete Video</a>
         
         {% endif %}
 
