--- a/new_sites/templates/new_sites/base.html
+++ b/new_sites/templates/new_sites/base.html
@@ -12,7 +12,7 @@
 <body>
     <div class =  "topnav">
 
-            <a href = "{%url 'new_sites:index' %}">HOMEW</a> </li>
+            <a href = "{%url 'new_sites:index' %}">HOME</a> </li>
             <a href = "{%url 'new_sites:post_list' %}">POSTS</a> </li>
             <a href = "{%url 'new_sites:videos' %}">VIDEOS</a> </li>
             <a href = "{%url 'new_sites:book_list' %}">BOOKS</a> </li>
