--- a/new_sites/templates/new_sites/base.html
+++ b/new_sites/templates/new_sites/base.html
@@ -5,7 +5,10 @@
     <head> 
 
             <title> Home </title> 
-            <link rel = "stylesheet" type = "text/css" href= {% static 'css/style2.css' %}> 
+
+            
+
+            <link rel = "stylesheet" type = "text/css" href= {% static 'css/style2.css' %}>
 
     </head>
 
@@ -29,6 +32,17 @@
     </div>
 
     <div class = 'body-text'>
+
+
+<!--- 
+        <h1> Hello World </h1>
+            <form action=''> 
+                <input type='text' name = 'abc' />
+            
+                <input type='submit' /> 
+            
+            </form> 
+-->
         {%block content%} {%endblock content%}
     </div>
 
